# File-Sharing-App

./: app.py  pyproject.toml  requirements.txt
static/: index.css  manifest.json  style.css
templates/: index.html  login.html  register.html
