[project]
name = "file-sharing-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-mysqldb>=2.0.0",
    "flask-unsign>=1.2.1",
    "qrcode[pil]>=8.2",
    "waitress>=3.0.2",
]
